Implement game loading mechanincs.